src/styles.scss
/* You can add global styles to this file, and also import other style files */
@font-face {
  font-family: "Montserrat, sans-serif";
  src: url('./assets/Montserrat/Montserrat-Regular.ttf');
}


app-selectdocument {
  .ant-upload.ant-upload-drag .ant-upload-btn{
   // min-height: 300px !important;
  }
  .ng-star-inserted.ant-upload.ant-upload-drag {
    height: unset !important;
  }
  .uploadArea{
    position: static !important;
    height: auto !important;
  }
}

app-indicator {
  display: inline-flex;
}

.content-section {
  margin-top: 4rem !important;
}

.ant-select:not(.ant-select-disabled):hover .ant-select-selector {
  border-color: #a5c2ae;
}

//slider wheel after moving color
//converted HEX green to RBG so that it can be 50% transparent (to offset the color scheme a little better).
.ant-slider-handle:focus {
  border-color: #a5c2ae;
  box-shadow: 0 0 0 5px rgb(165,194,174, 0.5);
}

//slider wheel actively moving color
.ant-slider-handle.ant-tooltip-open {
  border-color: #a5c2ae;
}

//all search boxes box when hovering
.ant-input:hover {
  border-color: #a5c2ae;
  border-right-width: 1px !important;
}
//"Search indicator in "Result" after selection border color
.ant-input:focus {
  border-color: #453457;
  box-shadow: 0 0 0 2px rgb(69,52,87, 0.5);
}
//all search boxes in "Filters" after selection (focused)
.ant-select-focused.ant-select-multiple .ant-select-selector {
  border-color: #453457;
  box-shadow: 0 0 0 2px rgb(69,52,87, 0.5);
}

//alert  about selecting "... at least one indicator per level"
//may change all alerts for entire website!
.ant-alert-info {
  background-color: #a5c2ae;
  border: #5d7063;
}
//icon inside alert
.ant-alert-info  .ant-alert-icon {
  color: #453457;
}

//Warning about "no indicators were found..."
//may change all warnings for entire website!
.ant-alert-warning {
  background-color: rgb(165,194,174, 0.5);
  border: 1px solid #5d7063;
}
//warning icon color
.ant-alert-warning .ant-alert-icon {
  color: #453457;
}
//warning and alert text color
.ant-alert-message {
  color: #453457;
}

//CSS for USER Icon at top right of screen

//hover for user icon
.ant-menu-item:hover, .ant-menu-item-active, .ant-menu:not(.ant-menu-inline) .ant-menu-submenu-open, .ant-menu-submenu-active, .ant-menu-submenu-title:hover {
  color: #a5c2ae;
}
//menu after selecting the user icon
.ant-menu-submenu > .ant-menu {
  background-color:rgba(242, 242, 242);
  border-radius: 4px;
}
//item text inside menu when hovering over
.ant-menu-item > a:hover {
  color: #453457;
}
.ant-menu-item > a {
  color: #a5c2ae;
  font-weight: 500;
}

//indicator upload icon color
.ant-upload.ant-upload-drag p.ant-upload-drag-icon .anticon {
  color: #a5c2ae;
}
//color for an "a" types
a{
  color: #453457;
}
//mouse hovering over the a
a:hover{
  color: #a5c2ae;
}
//button hover (specifically the green help button)
.ant-btn:hover, .ant-btn:focus {
  border-color: #453457;
  background: #453457;
  color: white;
}
//Selecting indicators in the results step (hover purple and change text color to white)
.ant-table-tbody > tr.ant-table-row:hover > td {
  background: #453457;
  color: white;
}

.ant-table-row-expand-icon {
  color: black;
}
//login input (username and password input
.ant-input-affix-wrapper-focused {
  border-color: #453457;
  box-shadow: 0 0 0 2px rgb(69,52,87, 0.5);

}
.ant-input-affix-wrapper:hover {
  border-color: #a5c2ae;
}

body, html {
  overflow: hidden;
}

.tooltip {
	position: absolute;
	background: #88b7d5;
	border: 2px solid #c2e1f5;
	padding:10px;
	border-radius:5px;
}

.tooltip:after,.tooltip:before {
	bottom: 100%;
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
}

.tooltip:after {
	border-color: rgba(136, 183, 213, 0);
	border-bottom-color: #88b7d5;
	border-width: 4px;
	left: 50%;
	margin-left: -4px;
}

.tooltip:before {
	border-color: rgba(194, 225, 245, 0);
	border-bottom-color: #c2e1f5;
	border-width: 8px;
	left: 50%;
	margin-left: -8px;
  }

h1, h2, h3, p, button {
  font-family: Montserrat, sans-serif;
}

.default-button {
  background: #453457;
  border: 1px solid #ffffff;
  box-sizing: border-box;
  border-radius: 5px;
  // padding: 0 1.5rem 0 1.5rem;
  font-weight: bold;
  font-size: 12px;
  line-height: 15px;
  text-transform: uppercase;
  color: #ffffff;
}

.toolbar-btn{
  margin-right: 10px;
  margin-left: 10px;
}

app-manage-indicators {
  width: 100%;
}

.ant-popover {
  max-width: 90vw !important;
}


#stepButton {
  top: 15rem;
  background: #a5c2ae;
  right: -65px;
  width: 8rem;
}
@media screen and (max-height: 725px) {
  #stepButton {
    top: 27rem;
  }
}

#knowledgeBaseButton {
  top: 20rem;
  right: -98px;
  width: 10rem;
}
@media screen and (max-height: 905px) {
  #knowledgeBaseButton {
    top: 32rem;
  }
}

#uploadButton {
  top: 25rem;
}
#feedbackButton {
  top: 42rem;
}
@media screen and (max-height: 1050px) {
  #uploadButton {
    top: 37rem;
  }
}
@media screen and (max-height: 650px) {
  #stepButton   {
    top: 67%;
  }
  #knowledgeBaseButton {
    top: 79%;
  }
  #uploadButton {
    top: 90%;
  }
}

.sideButton {
  z-index: 9999;
  display: flex;
  position: absolute;
  right: -145px;
  background: #453457;
  border-radius: 5px 0px 0px 5px;
  font-size: 1rem;
  font-weight: 700;
  color: #ffffff;
  align-items: center;
  height: 3rem;
  width: 13rem;
  i {
    margin-left: 5px;
    margin-right: 10px;
    font-size: 2rem;
  }
  border: none;
  transition: right 2s;
}

#stepButton:hover, #feedbackButton:hover, .sideButton:hover {
  right: 0px;
}

